failed attempt to change color

--- a/src/index.html
+++ b/src/index.html
@@ -16,10 +16,10 @@
     </div>
     <form>
       <fieldset>
-        <legend>Select a theme</legend>
+        <legend>excersise theme</legend>
 
         <div>
-          <input type="radio" id="dark" name="theme" value="dark" checked />
+          <input type="radio" id="dark" name="theme" value="dark"  />
           <label for="dark">Dark</label>
         </div>
 
