--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,8 @@
 
   <body>
     <h1>Hello hello</h1>
-    <div class="box">
+    <div id="box" class="box">
+    
       <p>
         This is a box with text that will change color when you toggle the theme
         switch
